Fix overflow when updating tasks on large screens

--- a/src/styles/layouts/_project-view.scss
+++ b/src/styles/layouts/_project-view.scss
@@ -7,6 +7,7 @@
   padding: a.rem(32);
   background-color: var(--background-color-3);
   transition: transform 0.15s;
+  overflow: hidden;
 
   &--active {
     grid-column: auto;
